schedule page graph, temp up down buttons react

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="tab fade-background col-xs-5">
-                <a href="#">Schedule</a>
+                <a href="#/schedule">Schedule</a>
             </div>
         </div>
     </div>
