--- a/schedule.html
+++ b/schedule.html
@@ -118,3 +118,84 @@
 </div>
 
 <div class="clear"></div>
+
+<script>
+// Get the context of the canvas element we want to select
+        var ctx = document.getElementById("myChart").getContext("2d");
+        var data = {
+            labels: ["12AM", "3AM", "6AM", "9AM", "12PM", "3PM", "6PM", "9PM"],
+            datasets: [
+                {
+                    label: "My First dataset",
+                    fillColor: "rgba(220,220,220,0.2)",
+                    strokeColor: "rgba(220,220,220,1)",
+                    pointColor: "rgba(220,220,220,1)",
+                    pointStrokeColor: "#fff",
+                    pointHighlightFill: "#fff",
+                    pointHighlightStroke: "rgba(220,220,220,1)",
+                    data: [75, 78, 80, 81, 72, 69, 74, 80]
+                },
+                // {
+                //     label: "My Second dataset",
+                //     fillColor: "rgba(151,187,205,0.2)",
+                //     strokeColor: "rgba(151,187,205,1)",
+                //     pointColor: "rgba(151,187,205,1)",
+                //     pointStrokeColor: "#fff",
+                //     pointHighlightFill: "#fff",
+                //     pointHighlightStroke: "rgba(151,187,205,1)",
+                //     data: [80, 76, 77, 71, 69, 66, 75, 80]
+                // }
+            ]
+        };
+        var options = {
+            scaleLineColor: "rgba(255,255,255,.4)",
+            scaleFontColor: "#fff",
+
+            ///Boolean - Whether grid lines are shown across the chart
+            scaleShowGridLines : true,
+
+            //String - Colour of the grid lines
+            scaleGridLineColor : "rgba(255,255,255,.15)",
+
+            //Number - Width of the grid lines
+            scaleGridLineWidth : 1,
+
+            //Boolean - Whether to show horizontal lines (except X axis)
+            scaleShowHorizontalLines: true,
+
+            //Boolean - Whether to show vertical lines (except Y axis)
+            scaleShowVerticalLines: true,
+
+            //Boolean - Whether the line is curved between points
+            bezierCurve : true,
+
+            //Number - Tension of the bezier curve between points
+            bezierCurveTension : 0.4,
+
+            //Boolean - Whether to show a dot for each point
+            pointDot : true,
+
+            //Number - Radius of each point dot in pixels
+            pointDotRadius : 4,
+
+            //Number - Pixel width of point dot stroke
+            pointDotStrokeWidth : 1,
+
+            //Number - amount extra to add to the radius to cater for hit detection outside the drawn point
+            pointHitDetectionRadius : 20,
+
+            //Boolean - Whether to show a stroke for datasets
+            datasetStroke : true,
+
+            //Number - Pixel width of dataset stroke
+            datasetStrokeWidth : 2,
+
+            //Boolean - Whether to fill the dataset with a colour
+            datasetFill : true,
+
+            //String - A legend template
+            legendTemplate : "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<datasets.length; i++){%><li><span style=\"background-color:<%=datasets[i].strokeColor%>\"></span><%if(datasets[i].label){%><%=datasets[i].label%><%}%></li><%}%></ul>"
+
+        };
+        var myLineChart = new Chart(ctx).Line(data, options);
+</script>
