--- a/home.html
+++ b/home.html
@@ -90,6 +90,7 @@
                     <div ng-switch-when="HEAT"><a href=""><strong>MODE:</strong> HEAT</a></div>
                     <div ng-switch-when="COOL"><a href=""><strong>MODE:</strong> COOL</a></div>
                     <div ng-switch-when="AUTO"><a href=""><strong>MODE:</strong> AUTO</a></div>
+                    <div ng-switch-when="OFF"><a href=""><strong>MODE:</strong> OFF</a></div>
                     <div ng-switch-default>error</div>
                 </div>
             </div>
