added missing case

--- a/home.html
+++ b/home.html
@@ -83,6 +83,7 @@
                     <li><a href="" ng-click="setTempMode('HEAT')">HEAT</a></li>
                     <li><a href="" ng-click="setTempMode('COOL')">COOL</a></li>
                     <li><a href="" ng-click="setTempMode('AUTO')">AUTO</a></li>
+                    <li><a href="" ng-click="setTempMode('OFF')">AUTO</a></li>
                 </ul>
             </div>
             <div ng-switch="tempMode">
@@ -94,7 +95,6 @@
                     <div ng-switch-default>error</div>
                 </div>
             </div>
-            <!-- <a href="#"><img src="_img/auto.png" /></a> -->
         </div>
     </div>
 
