--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
                     <li><a href="" ng-click="setTempMode('HEAT')">HEAT</a></li>
                     <li><a href="" ng-click="setTempMode('COOL')">COOL</a></li>
                     <li><a href="" ng-click="setTempMode('AUTO')">AUTO</a></li>
-                    <li><a href="" ng-click="setTempMode('OFF')">AUTO</a></li>
+                    <li><a href="" ng-click="setTempMode('OFF')">OFF</a></li>
                 </ul>
             </div>
             <div ng-switch="tempMode">
