--- a/schedule.html
+++ b/schedule.html
@@ -15,18 +15,18 @@
         </div>
 
         <div class="tabs">
-            <div class="tab fade-background highlight col-xs-5">
+            <div class="tab fade-background col-xs-5">
                 <a href="#">Home</a>
             </div>
 
-            <div class="tab fade-background col-xs-5">
+            <div class="tab fade-background highlight col-xs-5">
                 <a href="#">Schedule</a>
             </div>
         </div>
     </div>
 
     <div class="row main">
-        <div class="temp fade-background col-xs-12">
+        <div class="temp2 fade-background col-xs-12">
             <div class="degree">{{ targetTemp }}<span>&deg;</span></div>
             <div id="temp_controls">
                 <div class="down" ng-click="tempDown()"><img class="flip" src="_img/temp-down.png" /></div>
@@ -50,28 +50,23 @@
 
                 <canvas id="myChart" style="width: 90%;" height="150"></canvas>
 
-                <table id="rows">
+                <table id="rows" ng-repeat="row in schedules track by $index">
                     <thead>
+                        <tr class="heading">
+                            <td colspan="3">{{row.name}}</td>
+                        </tr>
                         <tr>
-                            <td>Start</td>
-                            <td>Start</td>
-                            <td>End</td>
+                            <td>Day</td>
+                            <td>Time</td>
                             <td>Temp</td>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="row in schedules track by $index">
-                            <td>{{row.name}}</td>
-                            <td>{{row}}</td>
-                            <td>9:00 AM</td>
-                            <td>73</td>
-                        </tr>
-                        <tr>
-                            <td>5:00 PM</td>
-                            <td>5:00 PM</td>
-                            <td>10:00 PM</td>
-                            <td>65</td>
-                        </tr>
+                        <tr ng-repeat="point in row.events track by $index">
+                            <td>{{point.day}}</td>
+                            <td>{{point.time}}</td>
+                            <td>{{point.temp}}</td>
+                        </tr
                     </tbody>
                 </table>
             </div>
@@ -104,7 +99,7 @@
                     <li><a href="" ng-click="setTempMode('HEAT')">HEAT</a></li>
                     <li><a href="" ng-click="setTempMode('COOL')">COOL</a></li>
                     <li><a href="" ng-click="setTempMode('AUTO')">AUTO</a></li>
-                    <li><a href="" ng-click="setTempMode('OFF')">AUTO</a></li>
+                    <li><a href="" ng-click="setTempMode('OFF')">OFF</a></li>
                 </ul>
             </div>
             <div ng-switch="tempMode">
