temp2 css removed

--- a/schedule.html
+++ b/schedule.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="row main">
-        <div class="temp2 fade-background col-xs-12">
+        <div class="temp fade-background col-xs-12">
             <div class="degree">{{ targetTemp }}<span>&deg;</span></div>
             <div id="temp_controls">
                 <div class="down" ng-click="tempDown()"><img class="flip" src="_img/temp-down.png" /></div>
