--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <div class="row menu">
 
         <div class="logo tab">
-            <a href="#"><img src="_img/authero-logo.png" />Authero</a>
+            <a href="#"><img src="_img/authero-logo.png" /></a>
         </div>
 
         <div class="tabs">
