--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Room ID #</th>
+                        <th>Room ID</th>
                         <th>Temp</th>
                     </tr>
                 </thead>
