space for graph

--- a/schedule.html
+++ b/schedule.html
@@ -97,7 +97,7 @@
                     </tr>
                 </table>
 
-                <canvas id="myChart" style="width: 100%;" height="175"></canvas>
+                <canvas id="myChart" style="width: 100%;" height="175" style="margin-bottom: 20px;"></canvas>
 
                 <table id="rows" ng-repeat="row in schedules track by $index">
                     <thead>
