--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     $('.setting .switch').css( "bottom", "70px" );
 
     document.getElementById("loginButton").onclick = function () {
-        location.href = "/";
+        location.href = "/authero/";
     };
 
 </script>
@@ -49,7 +49,7 @@
             <!-- <h1>Login</h1> -->
             <input type="text" name="login" value="" placeholder="Username">
             <input type="password" name="password" value="" placeholder="Password">
-            <button id="loginButton" onclick="javascript: ">Login</button>
+            <button id="loginButton">Login</button>
         </form>
 
         </div>
