--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 
         <div class="tabs">
             <div class="tab highlight col-xs-5">
-                <a href="#/login">Home</a>
+                <a href="#">Home</a>
             </div>
 
             <div class="tab col-xs-5">
