--- a/login.html
+++ b/login.html
@@ -1,10 +1,3 @@
-<script>
-
-    document.getElementById("loginButton").onclick = function () {
-        location.href = "/authero/";
-    };
-
-</script>
 
 <div class="container-fluid">
 
@@ -27,11 +20,11 @@
 
         <div class="rooms col-xs-12 ">
             
-        <form id="login">
-            <input type="text" name="login" value="" placeholder="Username">
-            <input type="password" name="password" value="" placeholder="Password">
-            <button id="loginButton">Login</button>
-        </form>
+            <form id="login">
+                <input type="text" name="login" value="" placeholder="Username" ng-model="username">
+                <input type="password" name="password" value="" placeholder="Password" ng-model="password">
+                <input type="button" id="loginButton" value="Login" ng-click="login()" />
+            </form>
 
         </div>
 
