--- a/schedule.html
+++ b/schedule.html
@@ -4,12 +4,12 @@
     <div class="row menu">
 
         <div class="logo tab">
-            <a href="#"><img src="_img/authero-logo.png" /></a>
+            <a href="#/home"><img src="_img/authero-logo.png" /></a>
         </div>
 
         <div class="tabs">
             <div class="tab col-xs-5">
-                <a href="#">Home</a>
+                <a href="#/home">Home</a>
             </div>
 
             <div class="tab highlight col-xs-5">
